# servr-storage

./: .gitignore  1q  README.md  compose.yaml  docker-compose.yaml
fastapi/: Dockerfile  requirements.txt
fastapi/project/: main.py
fastapi/project/auth/: methods.py  models.py
fastapi/project/database/: database.py
init-db/: schema.sql
rust-worker/: Cargo.toml  Dockerfile
rust-worker/src/: auth_methods.rs  lib.rs  main.rs  methods.rs  models.rs  msc_actions.rs  setup.rs
rust-worker/src/files/: methods.rs
rust-worker/src/models/: models.rs
rust-worker/tests/: files.rs
rust-worker/tests/api/: files.rs
rust-worker/tests/common/: mod.rs
showcase/: macapakkatror.png:Zone.Identifier
