[package]
name = "rust-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
axum-extra = { version = "0.12.2", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
dotenv_codegen = "0.15.0"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
bytes = "1.11.0"

aws-config = { version = "1.1.7", feautres = ["behavior-version-latest"] }
aws-sdk-s3 = "1.117.0"
