[package]
name = "rust_worker"
version = "0.1.0"
edition = "2024"
[[bin]]
name = "rust_worker"
path = "src/main.rs"
[lib]
name = "rust_worker"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8.7", features = ['macros'] }
axum-extra = { version = "0.12.2", features = ["multipart","cookie"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
dotenv_codegen = "0.15.0"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
bytes = "1.11.0"
sha2 = "0.11.0"
aws-config = { version = "1.1.7", feautres = ["behavior-version-latest"] }
aws-sdk-s3 = "1.117.0"
failure = "0.1.8"
moka = { version = "0.12.12", features = ["future"] }
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde_json = "1"
